# local-data-stack

./: .gitignore  main.py  pyproject.toml
orchestration/: assets.py  dbt_project.py  definitions.py  jobs.py  schedules.py
quality/gx/expectations/: .ge_store_backend_id
src/: io_utils.py
src/local_data_stack/: config.py  io_utils.py
src/local_data_stack/ingestion/: ieee_fraud.py
src/local_data_stack/quality/: context.py
transform/: dbt_project.yml  profiles.yml
transform/models/marts/: _marts__models.yml  fct_transactions.sql
transform/models/staging/: _ieee_fraud__sources.yml  stg_ieee_fraud__identity.sql  stg_ieee_fraud__transaction.sql
