[project]
name = "local-data-stack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.13.13",
    "dagster-dbt>=0.29.13",
    "dagster-webserver>=1.13.13",
    "dbt-duckdb>=1.10.1",
    "duckdb>=1.5.4",
    "great-expectations>=1.18.2",
    "polars>=1.42.1",
    "pyarrow>=24.0.0",
]

[build-system]
requires = ["uv_build>=0.11.9,<0.12.0"]
build-backend = "uv_build"
